added items to unordered lists

--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
   </head>
   <body>
     <div><h1>Boise Codeworks Journal</h1></div>
-    <div><h2>Day 1</h2></div>
+    <div><h2>Week 1</h2>
+      <div><h3>Day 1</h3>
+      <div>
+        
+      <ul><h4>Challenging: </h4>
+        <li>Configuring Github and Studio; Understanding the commit process between the two.</li>
+        <li>Command line use.</li>
+        <li>Learning how to use Slack.</li>
+      </ul>
+      <ul><h4>Rewarding: </h4>
+        <li>Publishing a very basic website.</li>
+        <li>Successfully linking Git with Visual Studio.</li>
+        <li>Making it through the first day!</li>
+      </ul>
+      <ul><h4>Looking Forward to: </h4>
+        <li>Seeing my knowledge and skills develop.</li>
+        <li>Getting more familiar with the proper use of the environments that were introduced today.</li>
+        <li>Creating more visually appealing and interactive pages</li>
+      </ul>
+    </div>
+  </div>
   </body>
 </html>
